--- a/schoollinks.css
+++ b/schoollinks.css
@@ -4,7 +4,7 @@ div#links {
     margin: 0 auto;
     height:60px;
     background-color:#3c2906 ;
-    box-shadow: 10px 10px 5px #888888;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
     
 }
 
