--- a/schoolwebstyle.css
+++ b/schoolwebstyle.css
@@ -2,9 +2,10 @@ h1 {
     font-family: 'Kalam', cursive;
   
 
-    color: #0c9d7c;
+    color: #89c91b;
     font-size:225px;
     text-align:center ;
+    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
 }
 
 h1 span {
@@ -14,10 +15,23 @@ h1 span {
     color: crimson;
 }
 
+h2 span {
+    display:block;
+    padding:75; 
+    color:#7cb618;
+    font-style: oblique; 
+    font-size:45px;
+    text-align: center;
+    margin: 200;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 1);
+      background-color: ghostwhite;
+}
+
 span {
     display:block;
     color:crimson;
     font-style: oblique; 
+    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
     font-size:200px;
     margin:50;
 }
@@ -38,8 +52,9 @@ body{
     background-attachment:fixed; 
     background-size:cover;
     background-position:center; 
-    background-image:url("http://i.imgur.com/vmLiLst.jpg");
+    background-image:url("http://i.imgur.com/1WLQQIR.png");
     margin:0;
+    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
      text-align:center ;
 }
 
@@ -70,10 +85,11 @@ input {
     font-size: 0.5em;
     font-weight: 0;
     font: bold;
+    
 }
 div#spoilertext {
      font-family: 'Kalam', cursive;
-    color: #0c9d7c;
+    color: crimson;
     font-size:25px;
     text-align:left ;
     
@@ -82,7 +98,7 @@ div#spoilertext {
 span#proslist {
  display:block;
     padding:75; 
-    color:crimson;
+    color:#7cb618;
     font-style: oblique; 
     font-size:40px;
     text-align: left;
@@ -91,3 +107,8 @@ span#proslist {
       background-color: ghostwhite;
 }
 
+img#icon {
+     height:300px;
+    border:10px solid #89c91b;
+    border-radius: 10px;
+}
