--- a/schoolwebstyle.css
+++ b/schoolwebstyle.css
@@ -1,11 +1,10 @@
 h1 {
     font-family: 'Kalam', cursive;
-  background-attachment:fixed; 
+  
 
-    color: #89c91b;
+    color: #0c9d7c;
     font-size:225px;
     text-align:center ;
-    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
 }
 
 h1 span {
@@ -13,57 +12,39 @@ h1 span {
     font-size:150px;
     display:inline;
     color: crimson;
-    background-attachment:fixed; 
-}
-
-h2 span {
-    display:block;
-    padding:75; 
-    color:#7cb618;
-    font-style: oblique; 
-    font-size:45px;
-    text-align: center;
-    margin: 200;
-    box-shadow: 2px 3px 10px rgba(0, 0, 0, 1);
-      background-color: ghostwhite;
-      background-attachment:fixed; 
 }
 
 span {
     display:block;
     color:crimson;
     font-style: oblique; 
-    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
     font-size:200px;
     margin:50;
-    background-attachment:fixed; 
 }
 gif {
     height:300px;
     width: 300px;
     border:10px solid crimson;
     border-radius: 10px;
-    background-attachment:fixed; 
 }
 img {
-    background-attachment:fixed; 
+    
     height:300px;
     border:10px solid crimson;
     border-radius: 10px;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
 }
 body{
     font-family: 'Kalam', cursive;
     background-attachment:fixed; 
     background-size:cover;
     background-position:center; 
-    background-image:url("http://i.imgur.com/1WLQQIR.png");
+    background-image:url("http://i.imgur.com/vmLiLst.jpg");
     margin:0;
-    text-shadow: 2px 3px 10px rgba(0, 0, 0, 0.375);
      text-align:center ;
 }
 
 prolist {
-background-attachment:fixed; 
  display:block;
     padding:75; 
     color:crimson;
@@ -77,7 +58,7 @@ background-attachment:fixed;
 
 input {
     font-family: 'Kalam', cursive;
-    background-attachment:fixed; 
+    
     color:crimson;
     background:none;
     background-image:url("http://i.imgur.com/QkV2Wsf.png");
@@ -90,22 +71,19 @@ input {
     font-size: 0.5em;
     font-weight: 0;
     font: bold;
-    
 }
 div#spoilertext {
-    background-attachment:fixed; 
      font-family: 'Kalam', cursive;
-    color: crimson;
+    color: #0c9d7c;
     font-size:25px;
     text-align:left ;
     
 }
 
 span#proslist {
-    background-attachment:fixed; 
  display:block;
     padding:75; 
-    color:#7cb618;
+    color:crimson;
     font-style: oblique; 
     font-size:40px;
     text-align: left;
@@ -114,9 +92,3 @@ span#proslist {
       background-color: ghostwhite;
 }
 
-img#icon {
-    background-attachment:fixed; 
-     height:300px;
-    border:10px solid #89c91b;
-    border-radius: 10px;
-}
